Fixed bug where footer covers bottom
By adding .content-wrap class attributes into .Site class (css)

--- a/src/HomeScreen.css
+++ b/src/HomeScreen.css
@@ -22,12 +22,13 @@ body {
 .Site {
     position: relative;
     min-height: 100vh;
-    /* text-align: center;
+    text-align: center;
     min-height: 100%;
     min-width: 100%;
-    padding-bottom: 2rem; */
+    padding-bottom: 2rem;
 }
 
+/* Use: Put .content-wrap div within .Site and only excludes .footer */
 .content-wrap {
     text-align: center;
     min-height: 100%;
